# lidar_odometry

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  build.sh
app/player/: kitti_player.cpp  kitti_player.h  ply_player.cpp
config/: kitti.yaml  mid360.yaml
docs/: Download_Dataset.md  Install.md  Performance_Analysis.md  Running_Example.md
src/: CMakeLists.txt
src/database/: LidarFrame.cpp  LidarFrame.h
src/optimization/: AdaptiveMEstimator.cpp  AdaptiveMEstimator.h  Factors.cpp  Factors.h  IterativeClosestPointOptimizer.cpp  Parameters.cpp  Parameters.h  PoseGraphOptimizer.cpp  PoseGraphOptimizer.h  PoseGraphOptimizerCeres.cpp  PoseGraphOptimizerCeres.h  PoseGraphOptimizerGTSAM.cpp  PoseGraphOptimizerGTSAM.h
src/processing/: DualFrameICPOptimizer.cpp  DualFrameICPOptimizer.h  Estimator.cpp  Estimator.h  FeatureExtractor.cpp  FeatureExtractor.h  IterativeClosestPoint.cpp  IterativeClosestPoint.h
src/util/: Config.cpp  Config.h  Types.h
src/viewer/: PangolinViewer.cpp  PangolinViewer.h
